// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb hSOygD"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb efHhsQ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb crfuQZ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb khTHXI"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat fXLetN"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb kDudGh"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat ibpqJv"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX psvBQ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb cJaWEV"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat knYevG"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb fIEKYy"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb eJNUrl"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb dHCXNz"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb hUbANr"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb jBRBGM"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb iPPqLG"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb gtUTFr"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb jQhdW"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb igSxuj"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb eMCHGj"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb islUIQ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb imLuLo"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb fIEKYy"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb eJNUrl"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb dHCXNz"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb hUbANr"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb jBRBGM"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb iPPqLG"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb gtUTFr"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb jQhdW"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb igSxuj"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb eMCHGj"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb islUIQ"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb imLuLo"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb jBRBGM"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-bxivhb jBRBGM"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    News
  </p>
</button>
`;
